feat(triggers): add Clear All Audio button for bulk cache management
AUDIO MANAGEMENT AT SCALE - Production ready for 100+ clients

NEW BUTTON: 🗑️ Clear Audio
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Location: Triggers page header (next to Bulk Audio)

Function:
- Invalidates all audio for company
- Marks audioNeedsRegeneration = true
- Requires typing "CLEAR" to confirm (safety)
- Then use "🎙️ Bulk Audio" to regenerate all

USE CASES:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
1. Voice change:
   Company changes ElevenLabs voice
   → Clear Audio → Bulk Regenerate with new voice ✅

2. Mass text edits:
   Updated 50 trigger responses
   → Clear Audio → Bulk Regenerate ✅

3. After deployment:
   Disk cache wiped on Render redeploy
   → No action needed! MongoDB fallback automatic ✅
   → Or optionally: Clear → Bulk Regenerate for fresh cache

4. Quality issues:
   Audio sounds wrong/garbled
   → Clear Audio → Bulk Regenerate ✅

WORKFLOW:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Step 1: Click "🗑️ Clear Audio"
  → Prompt: Type "CLEAR" to confirm
  → Clears: 113 triggers audio cache

Step 2: Click "🎙️ Bulk Audio"
  → Generates: 45/113 eligible (skips {name} variables, LLM mode)
  → Progress: "Generating 12/45..."
  → Saves to MongoDB (bulletproof)

Result: Fresh audio for all triggers!

BACKEND API:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
New endpoint:
POST /api/admin/agent2/:companyId/clear-all-audio

Functionality:
- Updates TriggerAudio collection
- Sets isValid=false for all company audio
- Sets invalidatedReason='BULK_CLEAR_BY_ADMIN'
- Logs who cleared (audit trail)

Returns:
{
  success: true,
  cleared: 113,
  message: "Cleared 113 audio files"
}

FILES MODIFIED:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
- public/agent-console/triggers.html
  Added "🗑️ Clear Audio" button to header

- public/agent-console/triggers.js
  Added clearAllAudio() function with confirmation
  Requires typing "CLEAR" 

--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -851,8 +851,11 @@
         <!-- Row 2: Actions -->
         <div style="display: flex; align-items: center; gap: 6px;">
           <span style="font-size: 10px; text-transform: uppercase; letter-spacing: 0.05em; color: #94a3b8; font-weight: 600; margin-right: 2px;">Actions</span>
+          <button class="btn btn-sm btn-ghost" id="btn-clear-all-audio" title="Clear all audio cache - force regeneration" style="font-size: 12px; padding: 4px 10px; color: #dc2626;">
+            🗑️ Clear Audio
+          </button>
           <button class="btn btn-sm btn-secondary" id="btn-bulk-generate-audio" title="Generate ElevenLabs audio for all eligible triggers" style="font-size: 12px; padding: 4px 10px;">
-            Bulk Audio
+            🎙️ Bulk Audio
           </button>
           <button class="btn btn-sm btn-secondary" id="btn-bulk-import-triggers" style="font-size: 12px; padding: 4px 10px;">
             Bulk Import
