docs(audio): add bulletproof architecture notes to prevent future mistakes
Added comprehensive documentation at all audio generation points:

UI DOCUMENTATION:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Added green info boxes in:
- Triggers page (Answer Text → Audio URL)
- Greetings page (Call Start → Audio URL)

Shows:
🔒 BULLETPROOF AUDIO ARCHITECTURE
✓ Saved to MongoDB (survives ALL deploys)
✓ Disk cache for fast serving (auto-restored)
✓ /audio-safe route with automatic fallback
✓ 3-tier serving: Disk → MongoDB → 404
⚠️ CRITICAL: Always use /audio-safe URLs (not /audio)

BACKEND DOCUMENTATION:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Added code comments in:
- routes/admin/greetings.js (Line 95)
- routes/admin/agent2.js (Line 2055)

Explains:
⚠️ CRITICAL FOR 100+ CLIENTS:
1. Save to disk (cache)
2. Save to MongoDB (permanent)
3. Use /audio-safe URLs
4. Reference to audioFallback.js

PURPOSE:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Prevents future developers from:
❌ Using /audio URLs (ephemeral)
❌ Forgetting MongoDB storage
❌ Not understanding the architecture
❌ Breaking 100+ client audio on deploy

Ensures future changes:
✓ Follow bulletproof pattern
✓ Use /audio-safe routes
✓ Save to MongoDB
✓ Understand the 3-tier system

FILES MODIFIED:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
- public/agent-console/triggers.html
  Green info box explaining architecture

- public/agent-console/agent2.html
  Green info box with detailed flow

- routes/admin/greetings.js
  Code comments with critical warnings

- routes/admin/agent2.js
  Code comments with architecture explanation

PROTECTION LEVEL: Maximum
Future-proof: Documented everywhere audio is generated/configured

Made-with: Cursor

--- a/public/agent-console/agent2.html
+++ b/public/agent-console/agent2.html
@@ -177,6 +177,18 @@
                   Setup ElevenLabs
                 </a>
               </label>
+              <div style="background: #dcfce7; border: 1px solid #86efac; padding: 12px; border-radius: 8px; margin-bottom: 12px;">
+                <div style="font-size: 11px; font-weight: 600; color: #166534; margin-bottom: 4px;">🔒 BULLETPROOF AUDIO ARCHITECTURE</div>
+                <div style="font-size: 10px; color: #15803d; line-height: 1.5;">
+                  <strong>How Audio Works (Production-Grade for 100+ Clients):</strong><br>
+                  ✓ Click "Generate" → Saves to <strong>MongoDB</strong> (permanent)<br>
+                  ✓ Also caches to disk for fast serving<br>
+                  ✓ Uses <strong>/audio-safe</strong> route with automatic fallback<br>
+                  ✓ If disk missing after deploy → Auto-serves from MongoDB<br>
+                  ✓ Disk cache auto-restores from MongoDB<br>
+                  <strong style="color: #166534;">⚠️ DEVELOPER NOTE:</strong> Always use /audio-safe URLs. Never /audio (ephemeral).
+                </div>
+              </div>
               <div style="display: flex; gap: 8px; margin-bottom: 8px;">
                 <input type="text" class="form-input" id="input-call-start-audio" placeholder="https://..." readonly style="flex: 1;">
                 <button type="button" class="btn btn-secondary" id="btn-play-call-start-audio" style="padding: 8px 16px; display: none;">
