--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -1270,6 +1270,16 @@
                     Setup ElevenLabs
                   </a>
                 </label>
+                <div style="background: #dcfce7; border: 1px solid #86efac; padding: 12px; border-radius: 8px; margin-bottom: 12px;">
+                  <div style="font-size: 11px; font-weight: 600; color: #166534; margin-bottom: 4px;">🔒 BULLETPROOF AUDIO ARCHITECTURE</div>
+                  <div style="font-size: 10px; color: #15803d; line-height: 1.5;">
+                    ✓ <strong>Saved to MongoDB</strong> (survives ALL deploys)<br>
+                    ✓ <strong>Disk cache</strong> for fast serving (auto-restored)<br>
+                    ✓ <strong>/audio-safe route</strong> with automatic fallback<br>
+                    ✓ <strong>3-tier serving:</strong> Disk → MongoDB → 404<br>
+                    <strong style="color: #166534;">⚠️ CRITICAL:</strong> Always use /audio-safe URLs (not /audio)
+                  </div>
+                </div>
                 <div style="display: flex; gap: 8px; margin-bottom: 8px;">
                   <input type="text" class="form-input" id="input-trigger-audio" placeholder="https://..." readonly style="flex: 1;">
                   <button type="button" class="btn btn-secondary" id="btn-play-audio" style="padding: 8px 16px; display: none;">
