--- a/public/agent-console/flow-map.html
+++ b/public/agent-console/flow-map.html
@@ -15,12 +15,15 @@
     .map-panel-body { padding: 12px; overflow: auto; }
     .map-actions { display: flex; gap: 8px; flex-wrap: wrap; }
     .step-list { display: flex; flex-direction: column; gap: 10px; }
-    .step-item { border: 1px solid #dbeafe; background: #eff6ff; border-radius: 10px; padding: 10px; cursor: pointer; }
+    .step-item { border: 1px solid #dbeafe; background: #eff6ff; border-radius: 10px; padding: 10px; transition: all 0.2s ease; }
     .step-item.active { border-color: #1d4ed8; box-shadow: 0 0 0 2px rgba(29,78,216,0.15); }
+    .step-item.expanded { background: #dbeafe; }
     .step-item-row { display: flex; align-items: center; justify-content: space-between; gap: 8px; }
-    .step-item-title { font-size: 13px; font-weight: 600; color: #1e3a8a; margin: 0; }
+    .step-item-title { font-size: 13px; font-weight: 600; color: #1e3a8a; margin: 0; display: flex; align-items: center; gap: 6px; }
     .step-item-meta { font-size: 12px; color: #334155; margin-top: 6px; }
     .step-item-controls { display: inline-flex; gap: 4px; }
+    .step-item-body { margin-top: 8px; padding: 12px; background: #f8f9fa; border-radius: 6px; font-size: 13px; line-height: 1.6; white-space: pre-wrap; border-left: 3px solid #007bff; color: #1e293b; max-height: 400px; overflow-y: auto; }
+    .expand-icon { font-size: 10px; color: #64748b; display: inline-block; width: 12px; }
     .tiny-btn { border: 1px solid #cbd5e1; background: #fff; border-radius: 8px; padding: 2px 8px; font-size: 12px; cursor: pointer; }
     .tiny-btn:hover { background: #f8fafc; }
     .map-board-wrap { background: #ffffff; border: 1px solid #e2e8f0; border-radius: 12px; padding: 8px; display: flex; flex-direction: column; min-height: 0; overflow: auto; }
