--- a/public/agent-console/flow-map.html
+++ b/public/agent-console/flow-map.html
@@ -24,8 +24,9 @@
     .step-item-controls { display: inline-flex; gap: 4px; }
     .step-item-body { margin-top: 8px; padding: 12px; background: #f8f9fa; border-radius: 6px; font-size: 13px; line-height: 1.6; white-space: pre-wrap; border-left: 3px solid #007bff; color: #1e293b; max-height: 400px; overflow-y: auto; }
     .expand-icon { font-size: 10px; color: #64748b; display: inline-block; width: 12px; }
-    .tiny-btn { border: 1px solid #cbd5e1; background: #fff; border-radius: 8px; padding: 2px 8px; font-size: 12px; cursor: pointer; }
-    .tiny-btn:hover { background: #f8fafc; }
+    .tiny-btn { border: 1px solid #cbd5e1; background: #fff; border-radius: 8px; padding: 2px 8px; font-size: 12px; cursor: pointer; transition: all 0.15s ease; }
+    .tiny-btn:hover { background: #f8fafc; border-color: #94a3b8; }
+    .tiny-btn[data-action="edit"] { padding: 2px 6px; }
     .map-board-wrap { background: #ffffff; border: 1px solid #e2e8f0; border-radius: 12px; padding: 8px; display: flex; flex-direction: column; min-height: 0; overflow: auto; }
     .map-board {
       position: relative;
