--- a/public/agent-console/callconsole.html
+++ b/public/agent-console/callconsole.html
@@ -1016,6 +1016,16 @@
             </div>
           </div>
           <div class="page-header-right">
+            <button class="btn btn-ghost" id="btn-flow-builder" title="Open Flow Builder - Collaborative Sequence Designer">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="2" y="2" width="5" height="5" rx="1" stroke="currentColor" stroke-width="1.5"/>
+                <rect x="9" y="2" width="5" height="5" rx="1" stroke="currentColor" stroke-width="1.5"/>
+                <rect x="2" y="9" width="5" height="5" rx="1" stroke="currentColor" stroke-width="1.5"/>
+                <rect x="9" y="9" width="5" height="5" rx="1" stroke="currentColor" stroke-width="1.5"/>
+                <path d="M7 4.5H9M4.5 7V9M11.5 7V9M7 11.5H9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+              </svg>
+              Flow Builder
+            </button>
             <button class="btn btn-secondary" id="btn-refresh-calls">
               <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M13 7C13 10.3137 10.3137 13 7 13C3.68629 13 1 10.3137 1 7C1 3.68629 3.68629 1 7 1C9.22222 1 11.1684 2.21309 12.1892 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
