Fix Triggers table header - rename columns and remove orphan text
1. SCOPE → LOCAL/GLOBAL (clearer meaning)
2. ENABLED → ON/OFF (clearer meaning)
3. Removed orphaned text lines below header bar

Made-with: Cursor

--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -1046,13 +1046,9 @@
             <div><strong>KEYWORDS</strong></div>
             <div><strong>ANSWER</strong></div>
             <div><strong>FOLLOW-UP</strong></div>
-            <div><strong>SCOPE</strong></div>
-            <div><strong>ENABLED</strong></div>
+            <div><strong>LOCAL/GLOBAL</strong></div>
+            <div><strong>ON/OFF</strong></div>
             <div><strong>ACTIONS</strong></div>
-          </div>
-            <div>Local/Global</div>
-            <div>On/Off</div>
-            <div>Actions</div>
           </div>
           <!-- Bulk Actions Bar (shown when items selected) -->
           <div id="bulk-actions-bar" style="display: none; background: #3b82f6; color: white; padding: 12px 16px; border-radius: 8px; margin-bottom: 12px; display: flex; align-items: center; justify-content: space-between;">
