Fix bulk actions bar showing when nothing selected
Made-with: Cursor

--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -1051,7 +1051,7 @@
             <div><strong>ACTIONS</strong></div>
           </div>
           <!-- Bulk Actions Bar (shown when items selected) -->
-          <div id="bulk-actions-bar" style="display: none; background: #3b82f6; color: white; padding: 12px 16px; border-radius: 8px; margin-bottom: 12px; display: flex; align-items: center; justify-content: space-between;">
+          <div id="bulk-actions-bar" style="display: none; background: #3b82f6; color: white; padding: 12px 16px; border-radius: 8px; margin-bottom: 12px; align-items: center; justify-content: space-between;">
             <div style="display: flex; align-items: center; gap: 12px;">
               <span id="bulk-selected-count" style="font-weight: 600;">0 selected</span>
               <button class="btn btn-sm" id="btn-clear-selection" style="background: rgba(255,255,255,0.2); border: none; color: white;">Clear Selection</button>
