Fix Agent Console violations: auth path + truthButton
Critical fixes for "one source of truth" compliance:

1. flow-builder.html: Fixed auth.js path
   - Was: /agent-console/auth.js (broken)
   - Now: /agent-console/lib/auth.js (correct)

2. Added truthButton.js to 5 missing pages:
   - callconsole.html
   - flow-builder.html
   - flow-map.html
   - scrabengine.html
   - globalshare.html

All Agent Console pages now have truth export capability.

Made-with: Cursor

--- a/public/agent-console/callconsole.html
+++ b/public/agent-console/callconsole.html
@@ -1162,6 +1162,7 @@
   <!-- JavaScript -->
   <script src="/agent-console/lib/auth.js"></script>
   <script src="/agent-console/lib/agent2PathNamespace.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/callconsole.js"></script>
 </body>
 </html>
