--- a/public/agent-console/flow-builder.html
+++ b/public/agent-console/flow-builder.html
@@ -176,7 +176,8 @@
     </div>
   </div>
 
-  <script src="/agent-console/auth.js"></script>
+  <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/flow-builder.js"></script>
 </body>
 </html>
