--- a/public/agent-console/flow-map.html
+++ b/public/agent-console/flow-map.html
@@ -161,6 +161,7 @@
   </div>
 
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/flow-map.js"></script>
 </body>
 </html>
