--- a/public/agent-console/globalshare.html
+++ b/public/agent-console/globalshare.html
@@ -392,6 +392,7 @@
   </div>
 
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/globalshare.js"></script>
 </body>
 </html>
