--- a/public/agent-console/scrabengine.html
+++ b/public/agent-console/scrabengine.html
@@ -744,6 +744,7 @@ thermostat=thermo stat, termostat, thermastat"></textarea>
   </div>
 
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/scrabengine.js"></script>
 </body>
 </html>
