Add company-scoped LLM Settings UI for behavioral governance
Create comprehensive settings interface where admins can configure AI behavior
per company, preventing settings bleed between different business types.

**New Features:**
- Company-scoped settings (dentist vs HVAC have independent configs)
- 6-tab interface: Overview, Profiles, Guardrails, Domains, Prompts, Generation
- Live preview sidebar showing assembled system prompts
- Export/Import JSON templates to copy settings between companies
- Behavioral guardrails (booking, pricing, emergency, data collection)
- Domain safety modes (medical, financial, emergency)
- 3 built-in profiles (compliance-safe, call-center, creative)
- Full prompt engineering with real-time updates

**Files Created:**
- public/agent-console/llm.html - Main settings UI
- public/agent-console/llm.js - Frontend controller
- docs/LLM-SETTINGS-GOVERNANCE-SPEC.md - Complete governance spec
- docs/LLM-SETTINGS-CONSOLIDATION-PLAN.md - Planning document
- docs/LLM-SETTINGS-IMPLEMENTATION.md - Implementation summary

**Files Modified:**
- public/agent-console/index.html - Add LLM Settings navigation card
- public/agent-console/index.js - Add navigation handler
- routes/admin/llmSettings.js - Support company-scoped settings via query param

**Key Guardrails (Cannot be disabled):**
- LLM cannot book appointments (answers only, routes to booking flow)
- LLM cannot quote exact prices (generic language, routes to sales)
- LLM must escalate emergencies immediately (no triage)

**Architecture:**
- URL: /agent-console/llm.html?companyId=12345
- API: GET/PUT /api/admin/llm-settings?scope=company:12345
- Isolation: Each company's settings stored independently in MongoDB
- Export/Import: Copy optimized configs between similar businesses

**Use Case Example:**
Dentist office enables Medical Mode (HIPAA, no diagnosis) with Compliance-Safe
profile, while HVAC company uses Call Center Optimized profile with no domain
restrictions. Settings never bleed between

--- a/public/agent-console/index.html
+++ b/public/agent-console/index.html
@@ -243,6 +243,27 @@
           </div>
 
         <!-- ───────────────────────────────────────────────────────────
+             CARD: LLM Settings
+             ─────────────────────────────────────────────────────────── -->
+          <div class="card nav-card" data-navigate="llm">
+            <div class="nav-card-icon">
+              <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2Z" stroke="currentColor" stroke-width="2"/>
+                <path d="M12 8V12L15 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <circle cx="12" cy="12" r="2" fill="currentColor"/>
+              </svg>
+            </div>
+            <h3 class="nav-card-title">🧠 LLM Settings</h3>
+            <p class="nav-card-description">Configure AI behavior, guardrails, and prompts. Control how the LLM generates scenarios and answers unforeseen questions. Company-specific settings prevent behavior bleeding between different business types.</p>
+            <div class="nav-card-action">
+              Open
+              <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+          </div>
+
+        <!-- ───────────────────────────────────────────────────────────
              CARD: Runtime Truth
              ─────────────────────────────────────────────────────────── -->
           <div class="card">
