Add Company Context field to LLM Settings - tell LLM its role
Add text box where admins describe the business (HVAC, dental, etc.) and
this context automatically becomes part of the system prompt.

**New Feature:**
- "Company Context & Business Description" text area in Overview tab
- Admins describe: business type, services, tone, seasonal patterns
- Context automatically injected into system prompt after base prompt
- Shows in live preview with green "Company Context" label

**Example Use:**
For Bob's HVAC:
"You are helping configure scenarios for Bob's HVAC, a residential heating
and cooling service company. We provide AC installation, repair, and
maintenance. Our busy seasons are summer (AC) and winter (heating). Tone:
Professional but friendly, service-focused."

**Why This Matters:**
- LLM now knows it's working for an HVAC company vs dentist office
- Generates industry-appropriate scenarios automatically
- No need to manually specify context in every scenario generation
- Company identity baked into all AI interactions

**Implementation:**
- Added `companyContext` field to DEFAULT_LLM_ENTERPRISE_SETTINGS
- Updated `buildScenarioArchitectSystemPromptFromSettings()` to inject context
- Updated `getScenarioPromptPartsFromSettings()` to include in preview
- Added textarea in llm.html Overview tab
- Added `updateCompanyContext()` handler in llm.js
- Shows in live preview between base prompt and profile prompt

**Storage:**
MongoDB LLMSettings { scope: "company:12345", settings: { companyContext: "..." } }

**Result:**
LLM receives system prompt:
1. Base prompt (role definition)
2. Company Context (HVAC company description) ⬅️ NEW!
3. Profile prompt (compliance-safe, call-center, etc.)
4. Domain safety (medical, financial, emergency)
5. Guardrails (booking, pricing restrictions)

Each company's LLM now knows exactly what business it's serving!

Made-with: Cursor

--- a/public/agent-console/llm.html
+++ b/public/agent-console/llm.html
@@ -495,6 +495,25 @@
                   (e.g., dentist office vs HVAC company).
                 </div>
                 
+                <!-- Company Context / Business Description -->
+                <div style="margin-top: 24px;">
+                  <h3 style="font-size: 1rem; font-weight: 600; margin-bottom: 8px;">
+                    🏢 Company Context & Business Description
+                  </h3>
+                  <p style="font-size: 0.875rem; color: var(--color-gray-600); margin-bottom: 12px;">
+                    Tell the LLM what type of business this is. This context is automatically included in all AI-generated scenarios.
+                  </p>
+                  <textarea 
+                    id="company-context" 
+                    class="prompt-editor" 
+                    style="min-height: 120px;"
+                    placeholder="Example for HVAC company:&#10;&#10;You are helping configure scenarios for Bob's HVAC, a residential heating and cooling service company in Phoenix, Arizona. We provide AC installation, repair, and maintenance. Our busy seasons are summer (AC) and winter (heating). Common customer needs: emergency repairs, seasonal tune-ups, new system installations, filter replacements. Tone: Professional but friendly, service-focused, helpful."
+                    onchange="updateCompanyContext(this.value)"></textarea>
+                  <div style="margin-top: 8px; font-size: 0.75rem; color: var(--color-gray-500);">
+                    💡 Tip: Include industry type, services offered, seasonal patterns, and desired tone. The LLM will use this context to generate appropriate scenarios.
+                  </div>
+                </div>
+                
                 <!-- Current Active Profile -->
                 <div style="margin-top: 24px;">
                   <h3 style="font-size: 1rem; font-weight: 600; margin-bottom: 12px;">Active Profile</h3>
