Fix company context save - use event listener instead of inline handler
Made-with: Cursor

--- a/public/agent-console/llm.html
+++ b/public/agent-console/llm.html
@@ -507,8 +507,7 @@
                     id="company-context" 
                     class="prompt-editor" 
                     style="min-height: 120px;"
-                    placeholder="Example for HVAC company:&#10;&#10;You are helping configure scenarios for Bob's HVAC, a residential heating and cooling service company in Phoenix, Arizona. We provide AC installation, repair, and maintenance. Our busy seasons are summer (AC) and winter (heating). Common customer needs: emergency repairs, seasonal tune-ups, new system installations, filter replacements. Tone: Professional but friendly, service-focused, helpful."
-                    onchange="updateCompanyContext(this.value)"></textarea>
+                    placeholder="Example for HVAC company:&#10;&#10;You are helping configure scenarios for Bob's HVAC, a residential heating and cooling service company in Phoenix, Arizona. We provide AC installation, repair, and maintenance. Our busy seasons are summer (AC) and winter (heating). Common customer needs: emergency repairs, seasonal tune-ups, new system installations, filter replacements. Tone: Professional but friendly, service-focused, helpful."></textarea>
                   <div style="margin-top: 8px; font-size: 0.75rem; color: var(--color-gray-500);">
                     💡 Tip: Include industry type, services offered, seasonal patterns, and desired tone. The LLM will use this context to generate appropriate scenarios.
                   </div>
