--- a/public/agent-console/llm.html
+++ b/public/agent-console/llm.html
@@ -401,7 +401,7 @@
             <path d="M3 10H13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </button>
-        <a href="/agent-console/" class="header-logo">
+        <a href="#" id="header-logo-link" class="header-logo">
           <svg viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect width="32" height="32" rx="8" fill="currentColor" fill-opacity="0.1"/>
             <path d="M16 6L26 11V21L16 26L6 21V11L16 6Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
