--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -1653,6 +1653,14 @@ Example: Our maintenance plan is $179 per year with two visits."></textarea>
         </button>
       </div>
       <div class="modal-body">
+        
+        <div style="background: #dbeafe; border-left: 4px solid #3b82f6; padding: 12px 16px; margin-bottom: 16px; border-radius: 6px;">
+          <div style="font-weight: 600; color: #1e40af; margin-bottom: 4px; font-size: 13px;">💡 New: {name} Support in Greeting Rules!</div>
+          <div style="font-size: 12px; color: #1e3a8a; line-height: 1.5;">
+            All greeting rules now support <code>{name}</code> placeholder. Configure time-based greetings (good morning, good evening) 
+            in <strong>Flow Builder → Greetings tab</strong>. This modal handles the acknowledgment line that precedes trigger responses.
+          </div>
+        </div>
 
         <!-- TOGGLE: Always greet -->
         <div style="display: flex; align-items: center; justify-content: space-between; padding: 14px 16px; background: #eff6ff; border: 1px solid #93c5fd; border-radius: 10px; margin-bottom: 20px;">
